--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
     "expo": "~51.0.7",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-get-random-values": "^1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/uuid": "^9.0.8",
     "typescript": "^5.1.3"
   },
   "private": true
